src/test/deca/syntax/invalid/mauvais_return_3.deca
// Description:
//    on retourne println qui n'est pas une exp
//
// Resultats:
// ligne 8: "no viable alternative at input 'println'"


{ return println("hey");}
